--- a/pipeline/stable-build-pipeline.yml
+++ b/pipeline/stable-build-pipeline.yml
@@ -10,5 +10,5 @@ pool:
 extends:
   template: common-job-template.yml
   parameters:
-    addon: 'zigbee2mqtt'
+    addon: 'zigbee2mqtt2'
     extra_param: '--no-cache --docker-hub-check'
