--- a/pipeline/stable-pr-pipeline.yml
+++ b/pipeline/stable-pr-pipeline.yml
@@ -16,5 +16,5 @@ pool:
 extends:
   template: common-job-template.yml
   parameters:
-    addon: 'zigbee2mqtt'
+    addon: 'zigbee2mqtt2'
     extra_param: '--no-latest --test'
