--- a/zigbee2mqtt/config.json
+++ b/zigbee2mqtt/config.json
@@ -1,10 +1,10 @@
 {
-  "name": "Zigbee2mqtt",
+  "name": "Zigbee2mqtt2",
   "version": "1.22.2-1",
-  "slug": "zigbee2mqtt",
+  "slug": "zigbee2mqtt2",
   "description": "Use your ZigBee devices without the vendor's bridge or gateway",
   "uart": true,
-  "url": "https://github.com/zigbee2mqtt/hassio-zigbee2mqtt/tree/master/zigbee2mqtt",
+  "url": "https://github.com/pakkardkaw/hassio-zigbee2mqtt/tree/master/zigbee2mqtt2",
   "startup": "application",
   "services": [
     "mqtt:need"
