--- a/zigbee2mqtt2/config.json
+++ b/zigbee2mqtt2/config.json
@@ -37,15 +37,15 @@
     "homeassistant": true,
     "permit_join": false,
     "mqtt": {
-      "base_topic": "zigbee2mqtt"
+      "base_topic": "zigbee2mqtt2"
     },
     "serial": {
       "port": "/dev/ttyACM0"
     },
     "advanced": {
       "log_level": "warn",
-      "pan_id": 6754,
-      "channel": 11,
+      "pan_id": 6722,
+      "channel": 19,
       "network_key": [1, 3, 5, 7, 9, 11, 13, 15, 0, 2, 4, 6, 8, 10, 12, 13],
       "availability_blocklist": [],
       "availability_passlist": []
@@ -171,5 +171,5 @@
       "log": "bool?"
     }
   },
-  "image": "zigbee2mqtt/zigbee2mqtt-{arch}"
+  "image": "zigbee2mqtt2/zigbee2mqtt-{arch}"
 }
